feat: export, edit relationship, list pagination, bug fixes, and code quality
Features:
- /export command: sends friends as CSV file (EN+RU)
- Edit relationship: EDIT_FIELD_REL callback + button in edit menu
- List pagination: page size 10 with prev/next navigation

Bug fixes:
- getNextAge() off-by-one for Feb-29 birthdays (year diff instead of Period)
- JubileeCommandHandler and StatsCommandHandler counted age 0 as jubilee
- notifyHour=0 from legacy MongoDB docs caused midnight notifications
- CSV export broke round-trip for names containing commas
- BirthdayReminder missed notifications on bot restart (added @PostConstruct)
- Double space in notifications when friend has no relationship set
- handleEditSelect called getFriends() twice for same userId

Code quality:
- FRIEND_CAP and JUBILEE_INTERVAL extracted to FriendService as shared constants
- Name length cap (100 chars) added to /add and /edit handlers
- CallbackQueryHandler refactored: extracted handler methods per prefix
- Removed unused imports, fields, methods, and redundant modifiers
- Unicode escapes replaced with literal characters in MessageBuilder
- .get(0) replaced with .getFirst() throughout
- Removed redundant public modifier on main() (Java 25)

Tests:
- BulkAddParserTest: 15 tests covering all validation paths
- RemoveCommandHandlerTest: removed always-same parameter